# compile_json_to_csv_or_parquet

./: etl.py  log.py  pipeline.py  pyproject.toml  requirements.txt  timer_decorator.py
data/: coleta_dia01.json  coleta_dia02.json  coleta_dia03.json
