[project]
name = "compile-json-to-csv-or-parquet"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandre Pinheiro",email = "alexandre.ypinheiro@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
