[project]
name = "compile-json-to-csv-or-parquet"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandre Pinheiro",email = "alexandre.ypinheiro@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
